cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_437.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/evp_extra_test.c:1479: error: DEAD_STORE
  The value written to &param (type ossl_param_st*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/evp_extra_test.c:1479:6: Write of unused value
1477.       *param++ = OSSL_PARAM_construct_size_t(OSSL_SIGNATURE_PARAM_DIGEST_SIZE,
1478.                                              &mdsize);
1479.       *param++ = OSSL_PARAM_construct_end();
             ^
1480.   
1481.       if (!TEST_true(EVP_PKEY_CTX_set_params(ctx, ourparams)))
